hphp/hack/test/typecheck/enum_class/no_unstable_feature_class.bad.php.exp
File "no_unstable_feature_class.bad.php", line 4, characters 1-32:
Cannot use unstable feature: `abstract_enum_class` (Parsing[1002])
