hphp/hack/test/typecheck/enum_class/no_unstable_feature_class.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

abstract enum class E : mixed {}
